--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 					<div id="intro">
 						<h1>Adebukola Abadariki Portfolio<br />
 						</h1>
-						<p>Hi, I'm Adebukola, an analyst who thrives on solving real-world business problems. 
-							Skilled with SQL, Python, Tableu and Excel.
-							I'm eager to combine my passion for problem-solving with my business analytics skills to help companies make best decisions.<a href="https://www.linkedin.com/in/adebukola-abadariki/"> @Adebukola Abadariki</a></p>
+						<p>Hi, I'm <a href="https://www.linkedin.com/in/adebukola-abadariki/"> @Adebukola Abadariki</a>, an analyst who thrives on solving real-world business problems. 
+							Skilled with SQL, Python, Tableau, and Excel,
+							I'm eager to combine my passion for problem-solving with my business analytics skills to help companies make the best decisions.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -56,7 +56,7 @@
 									
 									<h2><a href="https://github.com/aabadariki/pdsnd_github/blob/master/bikeshare.py">Exploring US Bikeshare Data<br />
 									Using Python</a></h2>
-									<p>    I made use of Python to explore data related to bike share systems for three major cities in the United States—Chicago, New York City, and Washington. I wrote code to import the data and answer interesting questions about it by computing descriptive statistics. I also wrote a script that takes in raw input to create an interactive experience in the terminal to present these statistics. Making use of Python to explore data related to bike share systems for three major cities in the United States—Chicago, New York City, and Washington, I wrote code to import the data and answer interesting questions about it by computing descriptive statistics. This project also involved writing a script that takes in raw input to create an interactive experience in the terminal to present these statistics.
+									<p>     Made use of Python to explore data related to bike share systems for three major cities in the United States—Chicago, New York City, and Washington, I wrote code to import the data and answer interesting questions about it by computing descriptive statistics. This project also involved writing a script that takes in raw input to create an interactive experience in the terminal to present these statistics.
 									Skills: Data Science · Python (Programming Language) · Data Analysis</p>
 								</header>
 								<a href="https://github.com/aabadariki/pdsnd_github/blob/master/bikeshare.py" class="image main"><img src="images/Bikeshare.jpg" alt="" /></a>
