--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Adebukola Abadariki Portfolio<br />
 						</h1>
-						<p>Hi, I'm <a href="https://www.linkedin.com/in/adebukola-abadariki/"> @Adebukola Abadariki</a>, an analyst who thrives on solving real-world business problems. 
+						<p>Hi, I'm <a href="https://www.linkedin.com/in/adebukola-abadariki/"> Adebukola Abadariki</a>, an analyst who thrives on solving real-world business problems. 
 							Skilled with SQL, Python, Tableau, and Excel,
 							I'm eager to combine my passion for problem-solving with my business analytics skills to help companies make the best decisions.</p>
 						<ul class="actions">
