--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Adebukola Abadariki Portfolio<br />
+						<h1>Adebukola Abadariki's Portfolio<br />
 						</h1>
 						<p>Hi, I'm <a href="https://www.linkedin.com/in/adebukola-abadariki/"> Adebukola Abadariki</a>, an analyst who thrives on solving real-world business problems. 
 							Skilled with SQL, Python, Tableau, and Excel,
