--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>Adebukola Abadariki Portfolio<br />
 						</h1>
 						<p>Hi, I'm <a href="https://www.linkedin.com/in/adebukola-abadariki/"target = '_blank'> Adebukola Abadariki</a>, an analyst who thrives on solving business problems. 
-							Skilled with SQL, Python, Tableu and Excel,
+							Skilled with SQL, Python, Tableau and Excel,
 							I'm eager to combine my passion for problem-solving with my business analytics skills to help companies make the best decisions.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
