--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
-								<p>Ibadan, Oyo State<br />
+								<p>Ikeja, Lagos State<br />
 								Nigeria</p>
 							</section>
 							<section>
